# weevil

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  TODO.md  weevil.toml.example
.github/workflows/: ci.yaml  release.yml
crates/weevil-app/: Cargo.toml
crates/weevil-app/src/: app.rs  cli.rs  config.rs  dir_mode.rs  errors.rs  fetch_runtime.rs  file_mode.rs  image_store.rs  logging.rs  main.rs  mode_params.rs  nfo.rs  script_info.rs  script_throttle.rs  source_priority.rs  source_runner.rs  video_parts.rs  watch_mode.rs
crates/weevil-app/src/config/: resolve_helpers.rs  script_listing.rs  script_paths.rs  value_types.rs
crates/weevil-app/src/file_mode/: fs_ops.rs  input_name.rs  naming.rs  plan.rs  subtitle_match.rs
crates/weevil-app/src/file_mode/naming/: actor.rs
crates/weevil-app/src/source_runner/: merge.rs  node_mapping.rs  priority_merge.rs
crates/weevil-app/src/source_runner/node_mapping/: csv.rs  loader.rs
crates/weevil-app/src/source_runner/tests/: merge.rs
crates/weevil-app/src/tests/: app.rs  cli.rs  config.rs  config_local.rs  config_source_priority.rs  dir_mode.rs  errors.rs  file_mode.rs  naming.rs  node_mapping.rs  watch_mode.rs
crates/weevil-app/src/translation/: config.rs  detector.rs  endpoints.rs  mod.rs  tests.rs  translator.rs
crates/weevil-core/: Cargo.toml
crates/weevil-core/examples/: crawl_httpbin.rs
crates/weevil-core/src/: html.rs  lib.rs  node.rs  query.rs  selector.rs  xpath.rs
crates/weevil-core/src/html/: error.rs  index.rs  iter.rs  serialize.rs  tests.rs
crates/weevil-core/src/query/: css.rs  selector_exec.rs  xpath_exec.rs  xpath_predicate.rs
crates/weevil-core/src/selector/: tests.rs
crates/weevil-lua/: Cargo.toml
crates/weevil-lua/examples/: browser_fetch.rs  fetch_title.rs  run_script.rs
crates/weevil-lua/src/: browser.rs  error.rs  http.rs  lib.rs  plugin.rs
crates/weevil-lua/src/lua/: browser.rs  browser_codec.rs  browser_tests.rs  json.rs  mod.rs  module.rs  types.rs
crates/weevil-lua/tests/: plugin.rs
crates/weevil-script/: Cargo.toml
crates/weevil-script/src/: abi.rs  guest.rs  host.rs  lib.rs  model.rs
crates/weevil-script/src/guest/: http.rs
crates/weevil-script/src/host/: whitelist.rs
docs/wiki/: README.md  config-reference.md  docker.md  lua-script-contract.md  normal-usage.md
