[package]
name = "weevil-app"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
mlua = { version = "0.11", features = ["lua55", "vendored", "serde"] }
notify = "6"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
weevil-lua = { path = "../weevil-lua" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "weevil"
path = "src/main.rs"
