[package]
name = "weevil-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cssparser = "0.36"
html5ever = "0.38"
precomputed-hash = "0.1"
rustc-hash = "2.1"
selectors = "0.35"
xee-xpath-ast = "0.1"
xot = "0.31"

[dev-dependencies]
robotstxt = "0.3"
ureq = "3"
