[package]
name = "weevil-lua"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = ["async", "json"]
async = ["mlua/async", "mlua/send"]
browser = ["dep:chromiumoxide", "dep:futures-util", "dep:serde_json", "dep:tokio", "async"]
json = ["dep:serde_json"]

[dependencies]
chromiumoxide = { version = "0.8", default-features = false, features = ["tokio-runtime"], optional = true }
futures-util = { version = "0.3", optional = true }
mlua = { version = "0.11", features = ["lua55", "vendored"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "http2", "rustls"] }
serde_json = { version = "1", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["rt", "time"], optional = true }
tracing = "0.1"
url = "2"
weevil-core = { path = "../weevil-core" }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
